--- a/index.html
+++ b/index.html
@@ -7,34 +7,39 @@
     <title>Главная</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize-opentype.css/0.2.4/normalize-opentype.css" integrity="sha512-XBLUJy48hph6E/wRP2rTqI6HJxw/47e9XIOlB0dG8YWAsJANGVr+YdcgWGDYsQPSRFfeD8sEVEwGklKQA7gB7w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="header">
+        <div class="container">
+        <nav class="container main-nav">
         <a class="logo" href="#"><span>Web</span>Studio </a>
         <ul class="site-nav">
-            <li><a class="link" href="">Студия</a></li>
-            <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="link" href="">Контакты</a></li>
+            <li class="item"><a class="link" href="">Студия</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="item"><a class="link" href="">Контакты</a></li>
         </ul>
-        </nav>
         <ul class="auth-nav">
-            <li><a class="link" href="">info@devstudio.com</a></li>
-            <li><a class="link" href="">+38 096 111 11 11</a></li>
+            <li class="item"><a class="link" href="">info@devstudio.com</a></li>
+            <li class="item"><a class="link" href="">+38 096 111 11 11</a></li>
         </ul>
-       
+    </nav> 
+</div>
     </header>
 <main>
-    <div>
-        <section>
+    <section class="hero">
+        <div class="container container-hero">
             <h1 class="title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <p class="button"><button type="button">Заказать услугу</button></p>
+        </div>
+            <p class="button"><button class="button-hero" type="button">Заказать услугу</button></p>
         </section>
-    </div>
+    
     <section class="section">
-        <ul>
+        <div class="conteiner">
+        <ul class="section-li">
             <li>
                 <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -52,9 +57,10 @@
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
+    </div>
     </section>
-    <section class="section">
-        <h2>Чем мы занимаемся</h2>
+    <section class="section section-img">
+     <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
                 <img src="./images/imagea.jpg" width="370" alt="компьютер">
@@ -66,7 +72,7 @@
                 <img src="./images/imagec.jpg" width="370" alt="цвет">
             </li>
         </ul>
-    </section>
+ </section>
     <section class="section-team">
         <h2>Наша команда</h2>
         <ul>
@@ -95,12 +101,14 @@
     </section>
 </main>
 <footer>
+    <div class="conteiner">
    <a class="logo-footer" href="#"><span class="web">Web</span>Studio</a>
     <address class="address">
      <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
     <a class="link" href="info@example.com">info@example.com </a> <br/>
     <a class="link" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
 </address>  
+</div>
 </footer>
 </body>
 </html>
