--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize-opentype.css/0.2.4/normalize-opentype.css" integrity="sha512-XBLUJy48hph6E/wRP2rTqI6HJxw/47e9XIOlB0dG8YWAsJANGVr+YdcgWGDYsQPSRFfeD8sEVEwGklKQA7gB7w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -22,8 +24,7 @@
                 <li><a class="link" href="">info@devstudio.com</a></li>
                 <li><a class="link" href="">+38 096 111 11 11</a></li>
             </ul>
-       
-    </header>
+        </header>
     <main>
         <section class="button-portf">
           <ul>
@@ -85,7 +86,7 @@
     <footer>
         <a class="logo-footer" href=""> <span class="web">Web</span>Studio</a>
         <address class="address">
-         <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
+        <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
         <a class="link" href="info@example.com">info@example.com </a> <br/>
         <a class="link" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
     </address>  
