--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </li>
         </ul>
     </div>
- </section>
+</section>
     <section class="section-team">
         <div class="container">
         <h2>Наша команда</h2>
@@ -105,14 +105,16 @@
     </section>
 </main>
 <footer>
+    <section class="section-footer">
     <div class="container container-footer">
    <a class="logo-footer" href=""><span class="web">Web</span>Studio</a>
     <address class="address">
      <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
     <a class="link" href="info@example.com">info@example.com </a> <br/>
-    <a class="link" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
+    <a class="link link-tel" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
 </address>  
 </div>
+</section>
 </footer>
 </body>
 </html>
