--- a/portfolio.html
+++ b/portfolio.html
@@ -11,84 +11,92 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a class="logo" href="#"><span>Web</span>Studio </a>
-            <ul class="site-nav">
-                <li><a class="link" href="index.html">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link" href="">Контакты</a></li>
+    <header class="header">
+        <div class="container">
+        <nav class="header-navigation">
+            <a class="logo-header" href=""><span>Web</span>Studio </a>
+            <ul class="list-header">
+                <li class="item"><a class="link" href="index.html">Студия</a></li>
+                <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="link" href="">Контакты</a></li>
             </ul>
-            </nav>
-            <ul class="auth-nav">
-                <li><a class="link" href="">info@devstudio.com</a></li>
-                <li><a class="link" href="">+38 096 111 11 11</a></li>
+            <ul class="tel-navigation">
+                <li class="item"><a class="link" href="">info@devstudio.com</a></li>
+                <li class="item"><a class="link" href="">+38 096 111 11 11</a></li>
             </ul>
+        </nav>
+    </div>
         </header>
     <main>
-        <section class="button-portf">
-          <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+        <section class="button-portfolio">
+            <div class="container">
+          <ul class="list-portfolio">
+            <li class="item-button"><button type="button">Все</button></li>
+            <li class="item-button"><button type="button">Веб-сайты</button></li>
+            <li class="item-button"><button type="button">Приложения</button></li>
+            <li class="item-button"><button type="button">Дизайн</button></li>
+            <li class="item-button"><button type="button">Маркетинг</button></li>
            </ul>
-        <ul class="section-body">
-            <li>
+        <ul class="list-image">
+            <li class="item">
         <img src="./images/portfolio/computer.jpg" width="370px" alt="Технокряк">
         <h3>Технокряк</h3>
         <p>Веб-сайт</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/bascket.jpg" width="370px" alt="Постер New Orlean vs Golden Star">
         <h3>Постер New Orlean vs Golden Star</h3>
         <p>Дизайн</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/seafood.jpg" width="370px" alt="Ресторан Seafood">
         <h3>Ресторан Seafood</h3>
         <p>Приложение</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/pods.jpg" width="370px" alt="Проект Prime">
         <h3>Проект Prime</h3>
         <p>Маркетинг</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/box.jpg" width="370px" alt="Проект Boxes">
         <h3>Проект Boxes</h3>
         <p>Приложение</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/comp.jpg" width="370px" alt="Inspiration has no Borders">
         <h3>Inspiration has no Borders</h3>
         <p>Веб-сайт</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/edition.jpg" width="370px" alt="Издание Limited Edition">
         <h3>Издание Limited Edition</h3>
         <p>Дизайн</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/labelteg.jpg" width="370px" alt="Проект LAB">
         <h3>Проект LAB</h3>
         <p>Маркетинг</p>
             </li>
-            <li>
+            <li class="item">
         <img src="./images/portfolio/busines.jpg" width="370px" alt="Growing Business">
         <h3>Growing Business</h3>
         <p>Приложение</p>
             </li>
             </ul> 
+        </div>
         </section>
     </main>
     <footer>
+        <section class="section-footer footer-portfolio">
+            <div class="container">
         <a class="logo-footer" href=""> <span class="web">Web</span>Studio</a>
         <address class="address">
         <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
         <a class="link" href="info@example.com">info@example.com </a> <br/>
         <a class="link" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
+    </div>
+    </section>
     </address>  
     </footer>
 </body>
