--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,13 @@
     <main>
         <section class="button-portfolio">
             <div class="container">
-          <ul class="list-portfolio">
+            <ul class="list-portfolio">
             <li class="item-button"><button type="button">Все</button></li>
             <li class="item-button"><button type="button">Веб-сайты</button></li>
             <li class="item-button"><button type="button">Приложения</button></li>
             <li class="item-button"><button type="button">Дизайн</button></li>
             <li class="item-button"><button type="button">Маркетинг</button></li>
-           </ul>
+            </ul>
         <ul class="list-image">
             <li class="item">
         <img src="./images/portfolio/computer.jpg" width="370px" alt="Технокряк">
@@ -94,7 +94,7 @@
         <address class="address">
         <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
         <a class="link" href="info@example.com">info@example.com </a> <br/>
-        <a class="link" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
+        <a class="link link-tel" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
     </div>
     </section>
     </address>  
