--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
     </header>
 <main>
     <section class="section-hero">
-        <div class="container container-hero">
-            <h1 class="title-hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <p class="button"><button class="button-hero" type="button">Заказать услугу</button></p>
-        </div>
+        <h1 class="title-hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button class="button-hero" type="button">Заказать услугу</button>
         </section>
     
-    <section class="section">
+    <section class="section-aside">
         <div class="container">
         <ul class="section-list">
             <li>
@@ -111,7 +109,7 @@
     <address class="address">
      <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
     <a class="link" href="info@example.com">info@example.com </a> <br/>
-    <a class="link link-tel" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
+    <a class="link link-tel" href="tel:+380991111111">+38 099 111 11 11 </a> 
 </address>  
 </div>
 </section>
