--- a/portfolio.html
+++ b/portfolio.html
@@ -40,48 +40,66 @@
         <ul class="list-image">
             <li class="item">
         <img src="./images/portfolio/computer.jpg" width="370px" alt="Технокряк">
-        <h3>Технокряк</h3>
+        <div class="subtitle">
+            <h3>Технокряк</h3>
         <p>Веб-сайт</p>
+        </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/bascket.jpg" width="370px" alt="Постер New Orlean vs Golden Star">
+        <div class="subtitle">
         <h3>Постер New Orlean vs Golden Star</h3>
         <p>Дизайн</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/seafood.jpg" width="370px" alt="Ресторан Seafood">
+        <div class="subtitle">
         <h3>Ресторан Seafood</h3>
         <p>Приложение</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/pods.jpg" width="370px" alt="Проект Prime">
+        <div class="subtitle">
         <h3>Проект Prime</h3>
         <p>Маркетинг</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/box.jpg" width="370px" alt="Проект Boxes">
+        <div class="subtitle">
         <h3>Проект Boxes</h3>
         <p>Приложение</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/comp.jpg" width="370px" alt="Inspiration has no Borders">
+        <div class="subtitle">
         <h3>Inspiration has no Borders</h3>
         <p>Веб-сайт</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/edition.jpg" width="370px" alt="Издание Limited Edition">
+        <div class="subtitle">
         <h3>Издание Limited Edition</h3>
         <p>Дизайн</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/labelteg.jpg" width="370px" alt="Проект LAB">
+        <div class="subtitle">
         <h3>Проект LAB</h3>
         <p>Маркетинг</p>
+    </div>
             </li>
             <li class="item">
         <img src="./images/portfolio/busines.jpg" width="370px" alt="Growing Business">
+        <div class="subtitle">
         <h3>Growing Business</h3>
         <p>Приложение</p>
+    </div>
             </li>
             </ul> 
         </div>
