--- a/portfolio.html
+++ b/portfolio.html
@@ -110,9 +110,9 @@
             <div class="container">
         <a class="logo-footer" href=""> <span class="web">Web</span>Studio</a>
         <address class="address">
-        <p> г. Киев, пр-т Леси Украинки, 26 </p> <br/>
-        <a class="link" href="info@example.com">info@example.com </a> <br/>
-        <a class="link link-tel" href="tel:+380991111111">+38 099 111 11 11 </a> <br/>
+        <p> г. Киев, пр-т Леси Украинки, 26 </p> 
+        <a class="link" href="info@example.com">info@example.com </a> 
+        <a class="link link-tel" href="tel:+380991111111">+38 099 111 11 11 </a> 
     </div>
     </section>
     </address>  
